Fix overlap between hero name and tagline

--- a/sparkle/sparkle.css
+++ b/sparkle/sparkle.css
@@ -332,7 +332,7 @@ h1 {
     color: #555;
   }
 
-@media (max-width: 600px) {
+@media (max-width: 660px) {
 
   h1 {
     font-size: 30px;
